<resources>
    <string name="app_name">GP-A220</string>

    //start
    <string name="ok">允许</string>
    <string name="not_allow">不允许</string>
    <string name="allow_ble_title">允许此装置开启你的\n蓝牙吗？</string>
    <string name="alow_ble_msg">应用程序正在请求许可开启蓝牙，\n是否允许？</string>
    <string name="not_have_ble">您的手机不支持蓝牙或没有蓝牙模块，将无法使用本产品。</string>
    <string name="exit">退出</string>
    <string name="ble_open_fail">蓝牙开启失败，请前往设置界面动手动开启蓝牙。</string>
    <string name="exit_program_hint">再按一次退出程序</string>

    //ble
    <string name="ble">连接设备</string>
    <string name="find_by">现时可被侦测为「%s」</string>
    <string name="my_device">我的装置</string>
    <string name="dis_conn">未连接</string>
    <string name="connected">已连接</string>
    <string name="reconn">重连中</string>
    <string name="member">人员列表</string>
    <string name="conn_device">连接设备</string>
    <string name="sync_data">同步数据</string>
    <string name="export">导出数据</string>
    <string name="instruction">操作说明</string>
    <string name="setting">设定</string>
    <string name="must">添加人员 *(必填)</string>
    <string name="post_code">证件</string>
    <string name="post_number">证件号码</string>
    <string name="birth">出生日期</string>
    <string name="commit">保存</string>
    <string name="new_manber">新用户</string>
    <string name="edit">修改用户</string>
    <string name="user_info">人员信息</string>
    <string name="measure">测量体温</string>
    <string name="change">修改信息</string>
    <string name="delete_user">删除人员</string>
    <string name="ble_open_failed">蓝牙开启失败，请至蓝牙界面手动打开蓝牙。</string>
    <string name="go">前往</string>
    <string name="conform">确认</string>
    <string name="no">取消</string>
    <string name="permissions_hint">\"GP-A220\"需要地理位置信息权限，才能正常连接设备，请允许请求的权限。</string>
    <string name="permission_fail">由于您取消授予权限，BLE连接功能将无法使用。</string>
    <string name="find_device">搜索设备</string>
    <string name="close_ble">断开</string>
    <string name="no_device">没有搜索到设备。请打开设备的蓝牙后再次下拉刷新列表搜索设备。</string>
    <string name="conform_delete">删除后数据不能恢复，确定删除？</string>
    <string name="bind_user">绑定数据</string>
    <string name="bind">绑定</string>
    <string name="unbind_data">未绑定数据</string>
    <string name="select_member">选择绑定人员</string>
    <string name="bind_success">数据绑定成功。</string>
    <string name="instructions">操作说明</string>
    <string name="log_out">退出登录</string>
    <string name="sync_success">数据已同步。</string>
    <string name="app_version">APP版本</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="sign_in">注册</string>
    <string name="enter_pass">请输入密码</string>
    <string name="enter_name">请输入手机号码</string>
    <string name="phone_error">手机号码无效，请输入有效的手机号码。</string>
    <string name="pass_error">密码错误，请重新输入。</string>
    <string name="no_user">用户不存在。</string>
    <string name="net_error">网络异常，请检查您的网络状态。</string>
    <string name="pass_length">密码长度应大于6位。</string>
    <string name="user_exist">该用户已存在。</string>
    <string name="sign_success">注册成功，即将自动登录。</string>
    <string name="sign_out_check">是否退出登录？</string>
    <string name="no_export">您将无法使用导出文件功能。</string>
    <string name="ble_unconn_hint">设备未连接，请连接设备再执行操作。</string>
    <string name="conn">连接</string>
    <string name="phone">手机号</string>
    <string name="pass">密码</string>
    <string name="check_pass">确认密码</string>
    <string name="get_code">获取验证码</string>
    <string name="check_code">验证码</string>
    <string name="register">注册</string>


</resources>
