<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/alert_bg">

    <com.txtled.gpa220.widget.CustomTextView
        android:id="@+id/atv_ble_title"
        style="@style/main_tv"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_16_x"
        android:layout_marginRight="@dimen/dp_16_x"
        android:layout_marginLeft="@dimen/dp_16_x"
        android:text="@string/allow_ble_title"/>
    <com.txtled.gpa220.widget.CustomTextView
        android:id="@+id/atv_ble_msg"
        style="@style/main_tv"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/atv_ble_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dp_16_x"
        android:layout_marginLeft="@dimen/dp_16_x"
        android:layout_marginTop="@dimen/dp_8_x"
        android:text="@string/alow_ble_msg"/>
    <View
        android:id="@+id/v_alert_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        app:layout_constraintTop_toBottomOf="@+id/atv_ble_msg"
        android:layout_marginTop="@dimen/dp_16_x"
        android:background="@color/color_line"/>
    <View
        android:id="@+id/v_alert_line_ver"
        android:layout_width="@dimen/dp_1_x"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/v_alert_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/color_line"/>
    <com.txtled.gpa220.widget.CustomButton
        android:id="@+id/abt_ble_ok"
        style="@style/main_btn"
        app:layout_constraintTop_toBottomOf="@+id/v_alert_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/v_alert_line_ver"
        app:backgroundTint="@color/alert_bg"
        android:text="@string/ok"/>
    <com.txtled.gpa220.widget.CustomButton
        android:id="@+id/abt_ble_cancel"
        style="@style/main_btn"
        app:layout_constraintTop_toBottomOf="@+id/v_alert_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/v_alert_line_ver"
        app:backgroundTint="@color/alert_bg"
        android:text="@string/cancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>