<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/i_register_tool"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_32_x"
            android:layout_marginRight="@dimen/dp_32_x"
            android:paddingTop="@dimen/dp_6_x"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <com.txtled.gpa220.widget.CustomEditText
                android:id="@+id/cet_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:textSize="16sp"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/phone"
                android:gravity="center_vertical"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:background="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1_x"
            android:layout_marginLeft="@dimen/dp_32_x"
            android:layout_marginRight="@dimen/dp_32_x"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_32_x"
            android:layout_marginRight="@dimen/dp_32_x"
            android:paddingTop="@dimen/dp_6_x"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/dp_16_x"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <com.txtled.gpa220.widget.CustomEditText
                android:id="@+id/cet_register_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:gravity="center_vertical"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:background="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1_x"
            android:layout_marginLeft="@dimen/dp_32_x"
            android:layout_marginRight="@dimen/dp_32_x"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_check"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_32_x"
            android:layout_marginRight="@dimen/dp_32_x"
            android:paddingTop="@dimen/dp_6_x"
            android:layout_marginTop="@dimen/dp_16_x"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <com.txtled.gpa220.widget.CustomEditText
                android:id="@+id/cet_register_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/check_pass"
                android:gravity="center_vertical"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:background="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1_x"
            android:layout_marginLeft="@dimen/dp_32_x"
            android:layout_marginRight="@dimen/dp_32_x"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp_16_x"
            android:layout_marginRight="@dimen/dp_32_x"
            android:layout_marginLeft="@dimen/dp_32_x">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/cbt_register_get_code"
                android:layout_marginRight="@dimen/dp_16_x"
                android:paddingTop="@dimen/dp_6_x"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <com.txtled.gpa220.widget.CustomEditText
                    android:id="@+id/cet_register_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:hint="@string/check_code"
                    android:paddingTop="@dimen/dp_6_x"
                    android:paddingBottom="@dimen/dp_6_x"
                    android:gravity="center_vertical"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:id="@+id/v_register_line"
                android:background="@color/text_black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_x"
                android:layout_toLeftOf="@+id/cbt_register_get_code"
                android:layout_marginRight="@dimen/dp_16_x"
                android:layout_below="@+id/til_register_code"/>
            <com.txtled.gpa220.widget.CustomButton
                android:id="@+id/cbt_register_get_code"
                style="@style/main_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/get_code"
                app:cornerRadius="@dimen/dp_8_x"
                android:layout_alignBottom="@+id/v_register_line"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16_x"
                android:paddingRight="@dimen/dp_16_x"/>
        </RelativeLayout>
    </LinearLayout>

    <com.txtled.gpa220.widget.CustomButton
        android:id="@+id/cbt_register"
        style="@style/main_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_register"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/dp_64_x"
        android:layout_marginRight="@dimen/dp_64_x"
        android:textColor="@color/white"
        android:text="@string/register"
        app:cornerRadius="@dimen/dp_8_x"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>