<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_menu_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_menuclosxhdpi"
        android:padding="@dimen/dp_16_x"
        android:layout_marginTop="@dimen/dp_16_x"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <View
        android:id="@+id/v_menu_line_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"/>
    <LinearLayout
        android:id="@+id/ll_ble_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:layout_below="@+id/v_menu_line_one"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:id="@+id/img_ble_conn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_menuconectxhdpi"
            android:layout_weight="0.2"/>
        <com.txtled.gpa220.widget.CustomTextView
            android:id="@+id/ctv_ble_conn"
            style="@style/main_tv"
            android:text="@string/conn_device"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"
        android:layout_below="@+id/ll_ble_conn"/>
    <LinearLayout
        android:id="@+id/ll_data_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:layout_below="@+id/v_menu_line_two"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:id="@+id/img_data_sync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_menusyxhdpi"
            android:layout_weight="0.2"/>
        <com.txtled.gpa220.widget.CustomTextView
            android:id="@+id/ctv_data_sync"
            style="@style/main_tv"
            android:text="@string/sync_data"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"
        android:layout_below="@+id/ll_data_sync"/>
    <LinearLayout
        android:id="@+id/ll_data_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:layout_below="@+id/v_menu_line_three"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:id="@+id/img_data_export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_menuexportxhdpi"
            android:layout_weight="0.2"/>
        <com.txtled.gpa220.widget.CustomTextView
            android:id="@+id/ctv_data_export"
            style="@style/main_tv"
            android:layout_weight="1"
            android:text="@string/export"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line_four"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"
        android:layout_below="@+id/ll_data_export"/>
    <LinearLayout
        android:id="@+id/ll_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:layout_below="@+id/v_menu_line_four"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:id="@+id/img_inst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_menuinstrxhdpi"
            android:layout_weight="0.2"/>
        <com.txtled.gpa220.widget.CustomTextView
            android:id="@+id/ctv_inst"
            style="@style/main_tv"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:text="@string/instruction"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line_five"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"
        android:layout_below="@+id/ll_inst"/>
    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:layout_below="@+id/v_menu_line_five"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_menusetxhdpi"
            android:layout_weight="0.18"/>
        <com.txtled.gpa220.widget.CustomTextView
            android:id="@+id/ctv_setting"
            style="@style/main_tv"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:text="@string/setting"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line_six"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"
        android:layout_below="@+id/ll_setting"/>
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:layout_below="@+id/v_menu_line_six"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">
<!--        <ImageView-->
<!--            android:id="@+id/img_logout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@mipmap/home_menusetxhdpi"-->
<!--            android:layout_weight="0.2"/>-->
        <com.txtled.gpa220.widget.CustomTextView
            android:id="@+id/ctv_logout"
            style="@style/main_tv"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:text="@string/log_out"/>
    </LinearLayout>
    <View
        android:id="@+id/v_menu_line_seven"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1_x"
        android:background="@color/color_line"
        android:layout_below="@+id/ll_logout"/>
</RelativeLayout>